# game-of-life

./: .gitignore  CMakeLists.txt  LICENSE  README.md  client.cpp  conanfile.txt  main.cpp  server.cpp  world.proto
